--- a/pom.xml
+++ b/pom.xml
@@ -158,9 +158,8 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <storyType>html</storyType>                         l
-                        <storyReport>${basedir}/target/easyb/easyb-report.html
-                        </storyReport>
+                        <storyType>html</storyType>
+                        <storyReport>${basedir}/target/easyb/easyb-report.html</storyReport>
                     </configuration>
                 </plugin>
 
